Fix letter spacing

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,8 +1,9 @@
 
-@import url('https://fonts.googleapis.com/css?family=Titillium+Web&display=swap');
+/* @import url('https://fonts.googleapis.com/css?family=Titillium+Web&display=swap'); */
+@import url('https://fonts.googleapis.com/css?family=Didact+Gothic&display=swap');
 
 html {
-  font-family: 'Titillium Web' sans-serif;
+  font-family: 'Didact Gothic' sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -188,7 +189,7 @@ textarea {
   font: inherit;
 }
 html {
-  font: 112.5%/1.45em 'Titillium Web', serif;
+  font: 112.5%/1.45em 'Didact Gothic', serif;
   box-sizing: border-box;
   overflow-y: scroll;
 }
@@ -203,7 +204,7 @@ html {
 }
 body {
   color: hsla(0, 0%, 0%, 0.8);
-  font-family: 'Titillium Web' sans-serif;  
+  font-family: 'Didact Gothic' sans-serif;  
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
@@ -233,7 +234,7 @@ h1 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: 'Titillium Web' sans-serif;
+  font-family: 'Didact Gothic' sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 2.25rem;
@@ -249,7 +250,7 @@ h2 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: 'Titillium Web' sans-serif;
+  font-family: 'Didact Gothic' sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1.62671rem;
@@ -265,7 +266,7 @@ h3 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: 'Titillium Web' sans-serif;
+  font-family: 'Didact Gothic' sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1.38316rem;
@@ -281,7 +282,7 @@ h4 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: 'Titillium Web' sans-serif;
+  font-family: 'Didact Gothic' sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1rem;
@@ -297,7 +298,7 @@ h5 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: 'Titillium Web' sans-serif;
+  font-family: 'Didact Gothic' sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 0.85028rem;
@@ -313,7 +314,7 @@ h6 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: 'Titillium Web' sans-serif;
+  font-family: 'Didact Gothic' sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 0.78405rem;
